Covert action's controller to asynchronous

--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -35,7 +35,7 @@
     <add name="SchoolExpressConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SchoolExpressDb; Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="BaseUri" value="https://schoolexpress.com:444/" />
+    <add key="BaseUri" value="http://localhost:9000/" />
     <!-- AuthenticationModes [ NONE | BASIC | JWT | OAUTH ] -->
     <add key="AuthenticationModes" value="NONE" />
     <add key="TokenExpirationMinutes" value="30" />
