--- a/SchoolExpress.WebService/App.Release.config
+++ b/SchoolExpress.WebService/App.Release.config
@@ -8,9 +8,10 @@
   </appSettings>
   <common>
     <logging>
-      <factoryAdapter type="Common.Logging.Simple.TraceLoggerFactoryAdapter, Common.Logging" xdt:Transform="SetAttributes">
+      <factoryAdapter type="Common.Logging.Simple.TraceLoggerFactoryAdapter, Common.Logging"
+                      xdt:Transform="SetAttributes">
         <!-- level [ Trace | Debug | Info | Warn | Error | Fatal ] -->
-        <arg key="level" value="Info" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
+        <arg key="level" value="Info" xdt:Transform="Replace" xdt:Locator="Match(key)" />
       </factoryAdapter>
     </logging>
   </common>
