--- a/SchoolExpress.Domain/SchoolExpress.Domain.csproj
+++ b/SchoolExpress.Domain/SchoolExpress.Domain.csproj
@@ -1,5 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -39,7 +38,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcademicTerm.cs" />
-    <Compile Include="Assignment.cs" />
+    <Compile Include="Campus.cs" />
+    <Compile Include="Career.cs" />
+    <Compile Include="Degree.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="EnrollmentDetail.cs" />
     <Compile Include="IEntity.cs" />
@@ -47,12 +48,16 @@
     <Compile Include="ClassRoom.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="Enrollment.cs" />
-    <Compile Include="Grade.cs" />
     <Compile Include="EnumUtil.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CourseSchedule.cs" />
     <Compile Include="Day.cs" />
+    <Compile Include="Speaker.cs" />
+    <Compile Include="Student.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
