--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -25,7 +25,6 @@
     <trace autoflush="true">
       <listeners>
         <clear />
-        <add name="AzureDiagnostics" type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
         <add name="TextWriter" type="System.Diagnostics.TextWriterTraceListener" initializeData="Output.log" />
         <remove name="Default" />
       </listeners>
@@ -35,7 +34,7 @@
     <add name="SchoolExpressConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SchoolExpressDb; Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="BaseUri" value="http://localhost:9000/" />
+    <add key="BaseUri" value="https://+:444/" />
     <!-- AuthenticationModes [ NONE | BASIC | JWT | OAUTH ] -->
     <add key="AuthenticationModes" value="NONE" />
     <add key="TokenExpirationMinutes" value="30" />
