Add Data to Database

--- a/SchoolExpress.WebService/App.Release.config
+++ b/SchoolExpress.WebService/App.Release.config
@@ -4,7 +4,7 @@
 <!-- In case configuration is not the root element, replace it with root element in source configuration file -->
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <appSettings>
-    <add key="BaseUri" value="http://127.0.0.1:9000/" xdt:Transform="Replace" xdt:Locator="Match(key)" />
+    <add key="BaseUri" value="https://+:444/" xdt:Transform="Replace" xdt:Locator="Match(key)" />
   </appSettings>
   <common>
     <logging>
