--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -5,12 +5,15 @@
     <sectionGroup name="common">
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
     </sectionGroup>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework"
+             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+             requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <common>
     <logging>
-      <factoryAdapter type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService">
+      <factoryAdapter
+        type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService">
         <!-- level [ Trace | Debug | Info | Warn | Error | Fatal ] -->
         <arg key="level" value="Debug" />
         <arg key="showLevel" value="true" />
@@ -31,10 +34,12 @@
     </trace>
   </system.diagnostics>
   <connectionStrings>
-    <add name="SchoolExpressConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SchoolExpressDb; Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="SchoolExpressConnection"
+         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SchoolExpressDb; Integrated Security=SSPI;"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="BaseUri" value="https://+:444/" />
+    <add key="BaseUri" value="http://localhost:9000/" />
     <!-- AuthenticationModes [ NONE | BASIC | JWT | OAUTH ] -->
     <add key="AuthenticationModes" value="NONE" />
     <add key="TokenExpirationMinutes" value="30" />
@@ -114,7 +119,8 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient"
+                type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
 </configuration>
