--- a/SchoolExpress.Data/SchoolExpress.Data.csproj
+++ b/SchoolExpress.Data/SchoolExpress.Data.csproj
@@ -57,17 +57,19 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configurations\AcademicTermConfiguration.cs" />
     <Compile Include="Configurations\CampusConfiguration.cs" />
     <Compile Include="Configurations\CareerConfiguration.cs" />
+    <Compile Include="Configurations\CareerDetailConfiguration.cs" />
     <Compile Include="Configurations\ClassRoomConfiguration.cs" />
     <Compile Include="Configurations\CourseConfiguration.cs" />
     <Compile Include="Configurations\DegreeConfiguration.cs" />
     <Compile Include="Configurations\EnrollmentConfiguration.cs" />
     <Compile Include="Configurations\EnrollmentDetailConfiguration.cs" />
+    <Compile Include="Configurations\ModuleConfiguration.cs" />
+    <Compile Include="Configurations\PeriodConfiguration.cs" />
     <Compile Include="Configurations\PersonConfiguration.cs" />
-    <Compile Include="Configurations\CourseScheduleConfiguration.cs" />
-    <Compile Include="Configurations\CourseScheduleDetailConfiguration.cs" />
+    <Compile Include="Configurations\CareerScheduleConfiguration.cs" />
+    <Compile Include="Configurations\CareerScheduleDetailConfiguration.cs" />
     <Compile Include="Configurations\SpeakerConfiguration.cs" />
     <Compile Include="Configurations\StudentConfiguration.cs" />
     <Compile Include="DbContexts\SchoolExpressDbContext.cs" />
@@ -77,22 +79,24 @@
     <Compile Include="Helpers\RepositoryFactories.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\AcademicTermRepository.cs" />
     <Compile Include="Repositories\CampusRepository.cs" />
+    <Compile Include="Repositories\CareerDetailRepository.cs" />
     <Compile Include="Repositories\CareerRepository.cs" />
     <Compile Include="Repositories\ClassRoomRepository.cs" />
     <Compile Include="Repositories\CourseRepository.cs" />
     <Compile Include="Repositories\DegreeRepository.cs" />
     <Compile Include="Repositories\EnrollmentDetailRepository.cs" />
     <Compile Include="Repositories\EnrollmentRepository.cs" />
-    <Compile Include="Repositories\IAcademicTermRepository.cs" />
     <Compile Include="Repositories\ICampusRepository.cs" />
+    <Compile Include="Repositories\ICareerDetailRepository.cs" />
     <Compile Include="Repositories\IClassRoomRepository.cs" />
     <Compile Include="Repositories\ICourseRepository.cs" />
-    <Compile Include="Repositories\ICourseScheduleDetailRepository.cs" />
-    <Compile Include="Repositories\ICourseScheduleRepository.cs" />
+    <Compile Include="Repositories\ICareerScheduleDetailRepository.cs" />
+    <Compile Include="Repositories\ICareerScheduleRepository.cs" />
     <Compile Include="Repositories\ICareerRepository.cs" />
     <Compile Include="Repositories\IDegreeRepository.cs" />
+    <Compile Include="Repositories\IModuleRepository.cs" />
+    <Compile Include="Repositories\IPeriodRepository.cs" />
     <Compile Include="Repositories\IRoleRepository.cs" />
     <Compile Include="Repositories\ISpeakerRepository.cs" />
     <Compile Include="Repositories\IStudentRepository.cs" />
@@ -100,6 +104,8 @@
     <Compile Include="Repositories\IUserLoginRepository.cs" />
     <Compile Include="Repositories\IUserClaimRepository.cs" />
     <Compile Include="Repositories\IUserRepository.cs" />
+    <Compile Include="Repositories\ModuleRepository.cs" />
+    <Compile Include="Repositories\PeriodRepository.cs" />
     <Compile Include="Repositories\RoleRepository.cs" />
     <Compile Include="Repositories\SpeakerRepository.cs" />
     <Compile Include="Repositories\StudentRepository.cs" />
@@ -114,8 +120,8 @@
     <Compile Include="Repositories\PersonRepository.cs" />
     <Compile Include="Repositories\Repository.cs" />
     <Compile Include="Helpers\RepositoryProvider.cs" />
-    <Compile Include="Repositories\CourseScheduleDetailRepository.cs" />
-    <Compile Include="Repositories\CourseScheduleRepository.cs" />
+    <Compile Include="Repositories\CareerScheduleDetailRepository.cs" />
+    <Compile Include="Repositories\CareerScheduleRepository.cs" />
     <Compile Include="Uows\ISchoolExpressUow.cs" />
     <Compile Include="Uows\IUow.cs" />
     <Compile Include="Uows\SchoolExpressUow.cs" />
@@ -129,6 +135,19 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="SqlScripts\Data\Campus.sql" />
+    <Content Include="SqlScripts\Data\Career.sql" />
+    <Content Include="SqlScripts\Data\CareerDetail.sql" />
+    <Content Include="SqlScripts\Data\ClassRoom.sql" />
+    <Content Include="SqlScripts\Data\Course.sql" />
+    <Content Include="SqlScripts\Data\Degree.sql" />
+    <Content Include="SqlScripts\Data\Module.sql" />
+    <Content Include="SqlScripts\Data\Period.sql" />
+    <Content Include="SqlScripts\Data\Person.sql" />
+    <Content Include="SqlScripts\Data\Speaker.sql" />
+    <Content Include="SqlScripts\Data\Student.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
