--- a/SchoolExpress.Domain/SchoolExpress.Domain.csproj
+++ b/SchoolExpress.Domain/SchoolExpress.Domain.csproj
@@ -37,21 +37,23 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AcademicTerm.cs" />
     <Compile Include="Campus.cs" />
     <Compile Include="Career.cs" />
+    <Compile Include="CareerDetail.cs" />
     <Compile Include="Degree.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="EnrollmentDetail.cs" />
     <Compile Include="IEntity.cs" />
-    <Compile Include="CourseScheduleDetail.cs" />
+    <Compile Include="CareerScheduleDetail.cs" />
     <Compile Include="ClassRoom.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="Enrollment.cs" />
     <Compile Include="EnumUtil.cs" />
+    <Compile Include="Module.cs" />
+    <Compile Include="Period.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CourseSchedule.cs" />
+    <Compile Include="CareerSchedule.cs" />
     <Compile Include="Day.cs" />
     <Compile Include="Speaker.cs" />
     <Compile Include="Student.cs" />
