--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -29,15 +29,11 @@
       </listeners>
     </trace>
   </system.diagnostics>
-  <connectionStrings>
-    <add name="SchoolExpressConnection.mssql" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SchoolExpressDb; Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
-    <add name="SchoolExpressConnection.pgsql" connectionString="server=localhost;user id=postgres;password=postgres;database=SchoolExpressDb" providerName="Npgsql" />
-  </connectionStrings>
+  <connectionStrings configSource="Config\connectionStrings.mssqllocaldb.config" />
   <appSettings>
     <add key="BaseUri" value="http://localhost:9000/" />
     <!-- AuthenticationModes [ NONE | BASIC | JWT | OAUTH ] -->
     <add key="AuthenticationModes" value="NONE" />
-    <add key="SchoolExpressConnection" value="SchoolExpressConnection.mssql" />
     <add key="TokenExpirationMinutes" value="30" />
     <add key="SecretKey" value="WMxnaGxY2x" />
   </appSettings>
@@ -112,15 +108,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework" />
-    <!--<defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />-->
-    <!--<defaultConnectionFactory type="Npgsql.NpgsqlConnectionFactory, EntityFramework6.Npgsql" />-->
-    <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-      <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql" />
-    </providers>
-  </entityFramework>
+  <entityFramework configSource="Config\entityFramework.mssqllocaldb.config" />
   <system.data>
     <DbProviderFactories>
       <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for Postgresql" type="Npgsql.NpgsqlFactory, Npgsql" />
