--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -5,11 +5,14 @@
     <sectionGroup name="common">
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
     </sectionGroup>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework"
+             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+             requirePermission="false" />
   </configSections>
   <common>
     <logging>
-      <factoryAdapter type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService">
+      <factoryAdapter
+        type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService">
         <!-- level [ Trace | Debug | Info | Warn | Error | Fatal ] -->
         <arg key="level" value="Debug" />
         <arg key="showLevel" value="true" />
@@ -29,8 +32,15 @@
       </listeners>
     </trace>
   </system.diagnostics>
-  <connectionStrings configSource="Config\connectionStrings.mssqllocaldb.config" />
+  <connectionStrings>
+    <add name="SchoolExpress.mssql"
+         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SchoolExpressDb; Integrated Security=SSPI;"
+         providerName="System.Data.SqlClient" />
+    <add name="SchoolExpress.pgsql" connectionString="server=localhost;user id=postgres;password=postgres;database=SchoolExpressDb"
+         providerName="Npgsql" />
+  </connectionStrings>
   <appSettings>
+    <add key="ConnectionName" value="SchoolExpress.pgsql" />
     <add key="BaseUri" value="http://localhost:9000/" />
     <!-- AuthenticationModes [ NONE | BASIC | JWT | OAUTH ] -->
     <add key="AuthenticationModes" value="NONE" />
@@ -108,11 +118,13 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework configSource="Config\entityFramework.mssqllocaldb.config" />
   <system.data>
     <DbProviderFactories>
-      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for Postgresql" type="Npgsql.NpgsqlFactory, Npgsql" />
-      <add name="SqlClient Data Provider" invariant="System.Data.SqlClient" description=".Net Framework Data Provider for SqlServer" type="System.Data.SqlClient.SqlClientFactory, System.Data, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for Postgresql"
+           type="Npgsql.NpgsqlFactory, Npgsql" />
+      <add name="SqlClient Data Provider" invariant="System.Data.SqlClient"
+           description=".Net Framework Data Provider for SqlServer"
+           type="System.Data.SqlClient.SqlClientFactory, System.Data, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     </DbProviderFactories>
   </system.data>
 </configuration>
