Configure DbConnectionFactory programmatically

--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -33,14 +33,11 @@
     </trace>
   </system.diagnostics>
   <connectionStrings>
-    <add name="SchoolExpress.mssql"
-         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SchoolExpressDb; Integrated Security=SSPI;"
-         providerName="System.Data.SqlClient" />
-    <add name="SchoolExpress.pgsql" connectionString="server=localhost;user id=postgres;password=postgres;database=SchoolExpressDb"
-         providerName="Npgsql" />
+    <add name="SchoolExpressConnection.mssql" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SchoolExpressDb; Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="SchoolExpressConnection.pgsql" connectionString="server=localhost;user id=postgres;password=postgres;database=SchoolExpressDb" providerName="Npgsql" />
   </connectionStrings>
   <appSettings>
-    <add key="ConnectionName" value="SchoolExpress.pgsql" />
+    <add key="SchoolExpressConnection" value="SchoolExpressConnection.mssql" />
     <add key="BaseUri" value="http://localhost:9000/" />
     <!-- AuthenticationModes [ NONE | BASIC | JWT | OAUTH ] -->
     <add key="AuthenticationModes" value="NONE" />
@@ -118,6 +115,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <!--<entityFramework configSource="entityFramework.config" />-->
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient"
+                type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="Npgsql" type="Npgsql.NpgsqlServices, EntityFramework6.Npgsql" />
+    </providers>
+  </entityFramework>
   <system.data>
     <DbProviderFactories>
       <add name="Npgsql Data Provider" invariant="Npgsql" description=".Net Framework Data Provider for Postgresql"
