--- a/SchoolExpress.WebService/SchoolExpress.WebService.csproj
+++ b/SchoolExpress.WebService/SchoolExpress.WebService.csproj
@@ -311,7 +311,6 @@
     <Content Include="replace-null.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\MsSql\Selects\Campus.sql" />
     <Content Include="libeay32.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -324,7 +323,6 @@
     <Content Include="openssl.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\MsSql\BulkInsert.sql" />
     <Content Include="Scripts\MsSql\Data\Campus.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -376,26 +374,6 @@
     <Content Include="Scripts\MsSql\ResetIdentities.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\MsSql\Selects\Career.sql" />
-    <Content Include="Scripts\MsSql\Selects\CareerDetail.sql" />
-    <Content Include="Scripts\MsSql\Selects\CareerSchedule.sql" />
-    <Content Include="Scripts\MsSql\Selects\CareerScheduleDetail.sql" />
-    <Content Include="Scripts\MsSql\Selects\ClassRoom.sql" />
-    <Content Include="Scripts\MsSql\Selects\Course.sql" />
-    <Content Include="Scripts\MsSql\Selects\Degree.sql" />
-    <Content Include="Scripts\MsSql\Selects\Enrollment.sql" />
-    <Content Include="Scripts\MsSql\Selects\EnrollmentDetail.sql" />
-    <Content Include="Scripts\MsSql\Selects\Module.sql" />
-    <Content Include="Scripts\MsSql\Selects\Period.sql" />
-    <Content Include="Scripts\MsSql\Selects\Person.sql" />
-    <Content Include="Scripts\MsSql\Selects\Role.sql" />
-    <Content Include="Scripts\MsSql\Selects\Speaker.sql" />
-    <Content Include="Scripts\MsSql\Selects\Student.sql" />
-    <Content Include="Scripts\MsSql\Selects\User.sql" />
-    <Content Include="Scripts\MsSql\Selects\UserAccount.sql" />
-    <Content Include="Scripts\MsSql\Selects\UserClaim.sql" />
-    <Content Include="Scripts\MsSql\Selects\UserLogin.sql" />
-    <Content Include="Scripts\MsSql\Selects\UserRole.sql" />
     <Content Include="Scripts\PgSql\Data\Campus.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -492,34 +470,72 @@
       <DependentUpon>App.config</DependentUpon>
       <IsTransformFile>True</IsTransformFile>
     </None>
-    <None Include="BulkInsertExec.bat" />
+    <None Include="LoadFromSqlFilesToDb.mssql.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="LoadFromSqlFilesToDb.pgsql.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="LoadFromCsvFilesToDb.pgsql.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="LoadFromCsvFilesToDb.mssql.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Configs\ConnectionFactory.pgsql.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Configs\ConnectionFactory.mssql.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="DataSources\Campus.csv" />
-    <None Include="DataSources\Career.csv" />
-    <None Include="DataSources\CareerDetail.csv" />
-    <None Include="DataSources\CareerSchedule.csv" />
-    <None Include="DataSources\CareerScheduleDetail.csv" />
-    <None Include="DataSources\ClassRoom.csv" />
-    <None Include="DataSources\Course.csv" />
-    <None Include="DataSources\Degree.csv" />
-    <None Include="DataSources\Enrollment.csv" />
-    <None Include="DataSources\EnrollmentDetail.csv" />
-    <None Include="DataSources\Module.csv" />
-    <None Include="DataSources\Period.csv" />
-    <None Include="DataSources\Person.csv" />
-    <None Include="DataSources\Role.csv" />
-    <None Include="DataSources\Speaker.csv" />
-    <None Include="DataSources\Student.csv" />
-    <None Include="DataSources\User.csv" />
-    <None Include="DataSources\UserAccount.csv" />
-    <None Include="DataSources\UserClaim.csv" />
-    <None Include="DataSources\UserLogin.csv" />
-    <None Include="DataSources\UserRole.csv" />
+    <None Include="LoadFromDbToCsvFiles.pgsql.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\Campus.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\Career.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\CareerDetail.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\CareerSchedule.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\CareerScheduleDetail.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\ClassRoom.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\Course.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\Degree.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\Enrollment.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\EnrollmentDetail.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\Module.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\Period.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\Person.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\Speaker.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="DataSources\Student.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="DbMigration.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -542,7 +558,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
-    <None Include="CreateCsvFiles.bat" />
+    <None Include="LoadFromDbToCsvFiles.mssql.bat">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="sqlparams.conf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="wwwroot\config.json" />
     <None Include="wwwroot\package.json" />
   </ItemGroup>
