Seed Data on Database Initializer

--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -37,12 +37,13 @@
     <add name="SchoolExpressConnection.pgsql" connectionString="server=localhost;user id=postgres;password=postgres;database=SchoolExpressDb;Persist Security Info=true" providerName="Npgsql" />
   </connectionStrings>
   <appSettings>
-    <add key="ConnectionName" value="SchoolExpressConnection.pgsql" />
+    <add key="SchoolExpressConnection" value="SchoolExpressConnection.pgsql" />
     <add key="BaseUri" value="http://localhost:9000/" />
     <!-- AuthenticationModes [ NONE | BASIC | JWT | OAUTH ] -->
     <add key="AuthenticationModes" value="NONE" />
     <add key="TokenExpirationMinutes" value="30" />
     <add key="SecretKey" value="WMxnaGxY2x" />
+    <add key="DataSourcesPath" value="" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
