--- a/SchoolExpress.WebService/sqlparams.conf
+++ b/SchoolExpress.WebService/sqlparams.conf
@@ -1,9 +1,10 @@
 ﻿;Leave Username and Password empty for trusted connection
 ;Leave Crypt empty for SQL Server without encryption or use -N for encryption
 ;DataSources is the directory path to data sources such as csv files, e.g. C:\Path\To\DataSources without backslash at the end, leave empty for default path
-Server="(localdb)\MSSQLLocalDB"
+;Sql Server localdb is between quotation marks. e.g.  "(localdb)\MSSQLLocalDB"
+Server=localhost
 Database=SchoolExpressDb
-Username=
-Password=
+Username=postgres
+Password=postgres
 Crypt=
 DataSources=
