Check expired OAuth and JWT tokens

--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -40,8 +40,8 @@
     <add key="SchoolExpressConnection" value="SchoolExpressConnection.pgsql" />
     <add key="BaseUri" value="http://localhost:9000/" />
     <!-- AuthenticationModes [ NONE | BASIC | JWT | OAUTH ] -->
-    <add key="AuthenticationModes" value="NONE" />
-    <add key="TokenExpirationMinutes" value="30" />
+    <add key="AuthenticationModes" value="JWT" />
+    <add key="TokenExpirationMinutes" value="2" />
     <add key="SecretKey" value="WMxnaGxY2x" />
     <add key="DataSources" value="" />
   </appSettings>
