--- a/SchoolExpress.WebService/App.config
+++ b/SchoolExpress.WebService/App.config
@@ -13,24 +13,41 @@
     <logging>
       <factoryAdapter
         type="SchoolExpress.WebService.Utils.ColoredConsoleOutLoggerFactoryAdapter, SchoolExpress.WebService">
-        <!-- level [ Trace | Debug | Info | Warn | Error | Fatal ] -->
+        <!-- LogLevel [ Trace | Debug | Info | Warn | Error | Fatal ] -->
         <arg key="level" value="Debug" />
         <arg key="showLevel" value="true" />
         <arg key="showLogName" value="false" />
         <arg key="showDataTime" value="true" />
         <arg key="dateTimeFormat" value="yyyy/MM/dd HH:mm:ss:fff" />
-        <arg key="useTraceSource" value="false" />
+        <arg key="useTraceSource" value="true" />
       </factoryAdapter>
     </logging>
   </common>
   <system.diagnostics>
-    <trace autoflush="true">
+    <trace autoflush="true" indentsize="0">
       <listeners>
         <clear />
-        <add name="TextWriter" type="System.Diagnostics.TextWriterTraceListener" initializeData="Output.log" />
+        <add name="textListener" />
         <remove name="Default" />
       </listeners>
     </trace>
+    <sources>
+      <source name="TraceSourceApp" switchName="sourceSwitch" switchType="System.Diagnostics.SourceSwitch">
+        <listeners>
+          <add name="textListener"/>
+          <remove name="Default"/>
+        </listeners>
+      </source>
+    </sources>
+    <sharedListeners>
+      <add name="textListener"
+           type="System.Diagnostics.TextWriterTraceListener"
+           initializeData="SchoolExpress.log"/>
+    </sharedListeners>
+    <switches>
+      <!-- TraceEventType [ All | Verbose | Information | Warning | Error | Critical ] -->
+      <add name="sourceSwitch" value="All"/>
+    </switches>
   </system.diagnostics>
   <connectionStrings>
     <add name="SchoolExpressConnection.mssql" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SchoolExpressDb; Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
@@ -38,10 +55,10 @@
   </connectionStrings>
   <appSettings>
     <add key="SchoolExpressConnection" value="SchoolExpressConnection.pgsql" />
-    <add key="BaseUri" value="http://localhost:9000/" />
+    <add key="BaseUri" value="https://+:444/" />
     <!-- AuthenticationModes [ NONE | BASIC | JWT | OAUTH ] -->
-    <add key="AuthenticationModes" value="JWT" />
-    <add key="TokenExpirationMinutes" value="2" />
+    <add key="AuthenticationModes" value="OAUTH" />
+    <add key="TokenExpirationMinutes" value="30" />
     <add key="SecretKey" value="WMxnaGxY2x" />
     <add key="DataSources" value="" />
   </appSettings>
